--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,7 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://104.198.232.48:5432/ecommerce-db
-#jdbc:postgres://dbname
+#jdbc:postgresql://public host of gcp/db name
 spring.datasource.username=vasanthan
 spring.datasource.password=vasanthan
 
