Added gcp configurations for connecting appEngine to cloudSQL

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,6 @@
 #active profile 
-spring.profiles.active=prod
+#spring.profiles.active=prod
+
+
+# available options are update, validate, create, create-drop
+spring.jpa.hibernate.ddl-auto=update
