--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,33 @@
 
 	</dependencies>
 
+	<profiles>
+	<profile>
+	<id>cloud-gcp</id>
+	<dependencies>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>spring-cloud-gcp-starter-sql-postgresql</artifactId>
+			<version>5.0.0</version>
+		</dependency>
+	</dependencies>
+		<build>
+			<plugins>
+				<plugin>
+					<groupId>com.google.cloud.tools</groupId>
+					<artifactId>appengine-maven-plugin</artifactId>
+					<version>1.3.2</version>
+				</plugin>
+			</plugins>
+		</build>
+	</profile>
+	</profiles>
+
 	<build>
 		<plugins>
 			<plugin>
