--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,7 +1,7 @@
 runtime: java
 env: flex
-#runtime_config:
-#  jdk: openjdk8
+runtime_config:
+  jdk: openjdk17
 env_variables:
   SPRING_PROFILES_ACTIVE: "gcp,postgres"
 manual_scaling:
