--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,7 +1,8 @@
 runtime: java17
 env: flex
-#runtime_config:
-#  jdk: openjdk17
+runtime_config:
+  operating_system: "ubuntu22"
+  runtime_version: "17"
 env_variables:
   SPRING_PROFILES_ACTIVE: "gcp,postgres"
 manual_scaling:
