Commit Pending changes and Connect to GCP SQL

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,8 +1,12 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://localhost:5433/postgres
 spring.datasource.username=postgres
-spring.datasource.password=masterpass
+spring.datasource.password=ecommerce-db
+
+# Connected to gcp from local using cloud-sql-proxy
+# https://stackoverflow.com/questions/60104672/pgadmin4-connect-to-postgres-in-google-cloud-sql
+# https://cloud.google.com/sql/docs/postgres/connect-auth-proxy#tcp-sockets
 
 #to display the sql quering generated using jpa
 spring.jpa.show-sql=true
