--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,13 +1,13 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://104.198.232.48:5432/ecommerce-db
+spring.datasource.url=jdbc:postgresql://34.46.34.17:5432/postgres
 #jdbc:postgresql://public host of gcp/db name
-spring.datasource.username=vasanthan
-spring.datasource.password=vasanthan
+spring.datasource.username=postgres
+spring.datasource.password=ecommerce-db
 
 
 #to display the sql quering generated using jpa
-spring.jpa.show-sql=false
+spring.jpa.show-sql=true
 
 #log
 #logging.level.org.springframework = debug
