--- a/src/main/resources/application-postgres.properties
+++ b/src/main/resources/application-postgres.properties
@@ -1,5 +1,5 @@
 spring.jpa.database=POSTGRESQL
 spring.datasource.platform=postgres
 spring.application.name =neon-obelisk-410111
-spring.datasource.username =vasanthan
-spring.datasource.password =vasanthan
+spring.datasource.username =postgres
+spring.datasource.password =ecommerce-db
