--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -4,6 +4,6 @@ runtime_config:
   operating_system: "ubuntu22"
   runtime_version: "17"
 env_variables:
-  SPRING_PROFILES_ACTIVE: "prod"
+  SPRING_PROFILES_ACTIVE: "gcp,postgres"
 manual_scaling:
   instances: 1
