--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,3 +1,5 @@
+spring.cloud.appId=neon-obelisk-410111
+
 spring.cloud.gcp.sql.instance-connection-name=\
     neon-obelisk-410111:us-central1:ecommerce-db
 spring.cloud.gcp.sql.database-name=postgres
