--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,5 +1,5 @@
-spring.cloud.appId=neon-obelisk-410111
+spring.cloud.appId=noble-maxim-443015-b7
 
 spring.cloud.gcp.sql.instance-connection-name=\
-    neon-obelisk-410111:us-central1:ecommerce-db
+    noble-maxim-443015-b7:us-central1:ecommerce-db
 spring.cloud.gcp.sql.database-name=postgres
