--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,9 @@
-spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgres
-spring.datasource.url=jdbc:postgresql://34.46.34.17:5432/postgres
-#jdbc:postgresql://public host of gcp/db name
-spring.datasource.username=postgres
-spring.datasource.password=ecommerce-db
+#spring.jpa.database=POSTGRESQL
+#spring.datasource.platform=postgres
+#spring.datasource.url=jdbc:postgresql://34.46.34.17:5432/postgres
+##jdbc:postgresql://public host of gcp/db name
+#spring.datasource.username=postgres
+#spring.datasource.password=ecommerce-db
 
 
 #to display the sql quering generated using jpa
