adding prod to gcp app.yml

--- a/src/main/resources/application-gcp.properties
+++ b/src/main/resources/application-gcp.properties
@@ -1,3 +1,6 @@
+#https://www.baeldung.com/spring-boot-google-app-engine
+#We?ll use a Spring Profile named gcp for this deployment and we?ll need to configure the database connection.
+
 spring.cloud.appId=noble-maxim-443015-b7
 
 spring.cloud.gcp.sql.instance-connection-name=\
