--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #active profile 
-#spring.profiles.active=prod
+#spring.profiles.active=dev
 
 
 # available options are update, validate, create, create-drop
