--- a/src/main/resources/spring-cloud-bootstrap.properties
+++ b/src/main/resources/spring-cloud-bootstrap.properties
@@ -1,1 +1,2 @@
+#Spring Cloud GCP uses spring-cloud-bootstrap.properties to determine the application name
 spring.cloud.appId=noble-maxim-443015-b7
